--- a/scss/style.scss
+++ b/scss/style.scss
@@ -109,15 +109,86 @@ body {
 }
 
 .button-uno {
-  background: #000000;
-  color: #fff;
-  display: inline-block;
+  height: 45px;
   width: 130px;
+  background-color: #000000;
+  color: #fff;
   font-size: 18px;
-  text-align: center;
-  text-decoration: none;
   border-radius: 10px;
-  padding: 10px 0;
+  display: inline-block;
+  cursor: pointer;
+  transition: 0.2s ease all;
+}
+
+.button-uno {
+  box-shadow: 5px 8px 15px #2c2c2c;
+}
+
+.button-uno:hover {
+  box-shadow: 5px 8px 15px #cd6032;
+}
+
+/* Main - Reservas */
+
+.reservas {
+  background: #151515;
+  color: #fff;
+  height: 500px;
+}
+
+.texto-reservas {
+  grid-column: 1/-1;
+  color: #fff;
+  text-align: center;
+}
+
+.titulo-reserva {
+  font-size: 40px;
+  font-weight: bold;
+  margin-top: 100px;
+  margin-bottom: 30px;
+}
+
+.parrafo-reserva {
+  font-size: 20px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.button-cotizar {
+  grid-column: 1/-1;
+  text-align: center;
+}
+
+.button-dos {
+  font-family: "Kalam", cursive;
+  height: 50px;
+  width: 300px;
+  background-color: #cd6032;
+  color: #fff;
+  font-size: 25px;
+  border-radius: 10px;
+  border-color: #cd6032;
+  display: inline-block;
+  cursor: pointer;
+  transition: 0.2s ease all;
+}
+
+.button-dos:hover {
+  box-shadow: 5px 8px 15px #4a4949;
+}
+
+.opcion-de-reserva {
+  grid-column: 2/-2;
+  display: flex;
+  margin: 20px 10px 10px 10px;
+  padding-bottom: 30px;
+}
+
+.opcion {
+  font-size: 18px;
+  text-align: justify;
 }
 
 /*** Main - Servicios ***/
@@ -135,7 +206,7 @@ body {
   justify-content: center;
   font-size: 35px;
   font-weight: bold;
-  margin-top: 20px;
+  margin-top: 90px;
   margin-bottom: 30px;
 }
 
@@ -171,43 +242,6 @@ body {
   margin-top: 10px;
   padding-left: 60px;
   padding-right: 60px;
-}
-
-/* Main - Reservas */
-
-.reservas {
-  background: #000000;
-  color: #fff;
-  height: 700px;
-}
-
-.texto-reservas {
-  grid-column: 1/-1;
-  color: #fff;
-  text-align: center;
-}
-
-.titulo-reserva {
-  font-size: 35px;
-  font-weight: bold;
-  margin-top: 30px;
-}
-
-.parrafo-reserva {
-  font-size: 20px;
-  text-align: center;
-  margin-top: 20px;
-}
-
-.opcion-de-reserva {
-  grid-column: 2/-2;
-  display: flex;
-  margin: 10px;
-}
-
-.opcion {
-  font-size: 18px;
-  text-align: justify;
 }
 
 /* Main - Nuestra Empresa */
@@ -370,8 +404,49 @@ body {
   }
 
   .button-uno {
-    width: 120px;
+    width: 130px;
     font-size: 16px;
+  }
+
+  /* Main - Reservas */
+
+  .reservas {
+    background: #151515;
+    color: #fff;
+    height: auto;
+    padding: 10px;
+  }
+
+  .texto-reservas {
+    grid-column: 1/-1;
+  }
+
+  .titulo-reserva {
+    font-size: 30px;
+  }
+
+  .parrafo-reserva {
+    font-size: 18px;
+    text-align: center;
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+
+  .button-dos {
+    height: 50px;
+    width: 240px;
+    font-size: 22px;
+  }
+
+  .opcion-de-reserva {
+    grid-column: 2/-2;
+    display: flex;
+    margin-bottom: 10px;
+  }
+
+  .opcion {
+    font-size: 18px;
+    text-align: justify;
   }
 
   /* Main - Servicios */
@@ -424,40 +499,6 @@ body {
     margin-bottom: 30px;
     padding-left: 55px;
     padding-right: 55px;
-  }
-
-  /* Main - Reservas */
-
-  .reservas {
-    background: #242424;
-    color: #fff;
-    height: auto;
-    padding: 10px;
-  }
-
-  .texto-reservas {
-    grid-column: 1/-1;
-  }
-
-  .titulo-reserva {
-    font-size: 30px;
-  }
-
-  .parrafo-reserva {
-    font-size: 18px;
-    text-align: center;
-    margin-left: 40px;
-    margin-right: 40px;
-  }
-
-  .opcion-de-reserva {
-    grid-column: 2/-2;
-    display: flex;
-    margin-bottom: 10px;
-  }
-  .opcion {
-    font-size: 18px;
-    text-align: justify;
   }
 
   /* Main - Nuestra Empresa */
@@ -604,8 +645,50 @@ body {
   }
 
   .button-uno {
+    height: 40px;
     width: 95px;
-    font-size: 13px;
+    font-size: 14px;
+  }
+
+  /* Main - Reservas */
+
+  .reservas {
+    background: #151515;
+    color: #fff;
+    height: auto;
+    padding: 10px 0;
+  }
+
+  .texto-reservas {
+    grid-column: 1/-1;
+  }
+
+  .button-dos {
+    height: 40px;
+    width: 180px;
+    font-size: 18px;
+  }
+
+  .opcion-de-reserva {
+    grid-column: 1/-1;
+    display: flex;
+    margin: 20px;
+  }
+
+  .titulo-reserva {
+    font-size: 20px;
+  }
+
+  .parrafo-reserva {
+    font-size: 15px;
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+
+  .opcion {
+    font-size: 15px;
+    text-align: justify;
   }
 
   /* Main - Servicios */
@@ -658,41 +741,6 @@ body {
     margin-bottom: 30px;
     padding-left: 5px;
     padding-right: 5px;
-  }
-
-  /* Main - Reservas */
-
-  .reservas {
-    background: #242424;
-    color: #fff;
-    height: auto;
-    padding: 10px 0;
-  }
-
-  .texto-reservas {
-    grid-column: 1/-1;
-  }
-
-  .opcion-de-reserva {
-    grid-column: 1/-1;
-    display: flex;
-    margin: 20px;
-  }
-
-  .titulo-reserva {
-    font-size: 20px;
-  }
-
-  .parrafo-reserva {
-    font-size: 15px;
-    text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-
-  .opcion {
-    font-size: 15px;
-    text-align: justify;
   }
 
   /* Main - Nuestra Empresa */
