--- a/scss/_medidas.scss
+++ b/scss/_medidas.scss
@@ -99,7 +99,8 @@
 
 .button-uno {
   width: 130px;
-  border-radius: 10px;
+  height: 45;
+  border-radius: 5px;
   padding: 10px 0;
   @media screen and (max-width: 767px) {
     width: 120px;
@@ -108,6 +109,44 @@
     width: 95px;
   }
 }
+
+.reservas {
+  height: 490px;
+  @media screen and (max-width: 767px) {
+    height: auto;
+    padding: 10px;
+  }
+  @media screen and (max-width: 400px) {
+    height: auto;
+    padding: 10px 0;
+  }
+}
+
+.titulo-reserva {
+  margin-top: 100px;
+}
+
+.parrafo-reserva {
+  margin-top: 20px;
+  @media screen and (max-width: 767px) {
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+  @media screen and (max-width: 400px) {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
+
+.opcion-de-reserva {
+  @media screen and (max-width: 767px) {
+    margin-bottom: 10px;
+  }
+  @media screen and (max-width: 400px) {
+    margin: 20px;
+  }
+}
+
 
 .servicios {
   height: 920px;
@@ -120,7 +159,7 @@
   }
 }
 .titulo-servicios {
-  margin-top: 20px;
+  margin-top: 100px;
   margin-bottom: 30px;
 }
 
@@ -157,43 +196,6 @@
     margin-bottom: 30px;
     padding-left: 5px;
     padding-right: 5px;
-  }
-}
-
-.reservas {
-  height: 700px;
-  @media screen and (max-width: 767px) {
-    height: auto;
-    padding: 10px;
-  }
-  @media screen and (max-width: 400px) {
-    height: auto;
-    padding: 10px 0;
-  }
-}
-
-.titulo-reserva {
-  margin-top: 30px;
-}
-
-.parrafo-reserva {
-  margin-top: 20px;
-  @media screen and (max-width: 767px) {
-    margin-left: 40px;
-    margin-right: 40px;
-  }
-  @media screen and (max-width: 400px) {
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-}
-
-.opcion-de-reserva {
-  @media screen and (max-width: 767px) {
-    margin-bottom: 10px;
-  }
-  @media screen and (max-width: 400px) {
-    margin: 20px;
   }
 }
 
