--- a/css/style.css
+++ b/css/style.css
@@ -285,7 +285,8 @@ body {
 
 .button-uno {
   width: 130px;
-  border-radius: 10px;
+  height: 45;
+  border-radius: 5px;
   padding: 10px 0;
 }
 @media screen and (max-width: 767px) {
@@ -296,6 +297,53 @@ body {
 @media screen and (max-width: 400px) {
   .button-uno {
     width: 95px;
+  }
+}
+
+.reservas {
+  height: 490px;
+}
+@media screen and (max-width: 767px) {
+  .reservas {
+    height: auto;
+    padding: 10px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .reservas {
+    height: auto;
+    padding: 10px 0;
+  }
+}
+
+.titulo-reserva {
+  margin-top: 100px;
+}
+
+.parrafo-reserva {
+  margin-top: 20px;
+}
+@media screen and (max-width: 767px) {
+  .parrafo-reserva {
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .parrafo-reserva {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .opcion-de-reserva {
+    margin-bottom: 10px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .opcion-de-reserva {
+    margin: 20px;
   }
 }
 
@@ -315,7 +363,7 @@ body {
 }
 
 .titulo-servicios {
-  margin-top: 20px;
+  margin-top: 100px;
   margin-bottom: 30px;
 }
 
@@ -360,53 +408,6 @@ body {
     margin-bottom: 30px;
     padding-left: 5px;
     padding-right: 5px;
-  }
-}
-
-.reservas {
-  height: 700px;
-}
-@media screen and (max-width: 767px) {
-  .reservas {
-    height: auto;
-    padding: 10px;
-  }
-}
-@media screen and (max-width: 400px) {
-  .reservas {
-    height: auto;
-    padding: 10px 0;
-  }
-}
-
-.titulo-reserva {
-  margin-top: 30px;
-}
-
-.parrafo-reserva {
-  margin-top: 20px;
-}
-@media screen and (max-width: 767px) {
-  .parrafo-reserva {
-    margin-left: 40px;
-    margin-right: 40px;
-  }
-}
-@media screen and (max-width: 400px) {
-  .parrafo-reserva {
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .opcion-de-reserva {
-    margin-bottom: 10px;
-  }
-}
-@media screen and (max-width: 400px) {
-  .opcion-de-reserva {
-    margin: 20px;
   }
 }
 
@@ -577,7 +578,7 @@ body {
 .titulo-reserva,
 .titulo-empresa {
   font-family: "Kalam", cursive;
-  font-size: 35px;
+  font-size: 40px;
 }
 @media screen and (max-width: 767px) {
   .titulo-tiare,
@@ -742,8 +743,8 @@ body {
 }
 
 .button-uno {
-  background-color: #000000;
-  box-shadow: 5px 8px 15px #2c2c2c;
+  background-color: #cd6032;
+  box-shadow: 3px 0px 30px rgba(163, 163, 163, 0.4);
 }
 
 .bg-light,
@@ -769,6 +770,7 @@ body {
 
 .navbar-toggler,
 .navbar-light,
+.reservas,
 .nav-link {
   color: #fff !important;
 }
@@ -776,7 +778,6 @@ body {
 .button-uno,
 .titulo-servicios,
 .item,
-.reservas,
 .texto-reservas,
 .footer,
 .texto-footer {
@@ -794,12 +795,17 @@ body {
 }
 
 .img-servicios {
-  box-shadow: 5px 8px 15px #2c2c2c;
+  box-shadow: 5px 8px 15px rgba(163, 163, 163, 0.4);
 }
 
 /*** Animaciones del sitio ***/
 .nav-link:hover {
   transition: 0.5s;
+}
+
+.button-uno {
+  cursor: pointer;
+  transition: 0.2s ease all;
 }
 
 * {
@@ -907,15 +913,85 @@ body {
 }
 
 .button-uno {
-  background: #000000;
-  color: #fff;
-  display: inline-block;
+  height: 45px;
   width: 130px;
+  background-color: #000000;
+  color: #fff;
   font-size: 18px;
-  text-align: center;
-  text-decoration: none;
   border-radius: 10px;
-  padding: 10px 0;
+  display: inline-block;
+  cursor: pointer;
+  transition: 0.2s ease all;
+}
+
+.button-uno {
+  box-shadow: 5px 8px 15px #2c2c2c;
+}
+
+.button-uno:hover {
+  box-shadow: 5px 8px 15px #cd6032;
+}
+
+/* Main - Reservas */
+.reservas {
+  background: #151515;
+  color: #fff;
+  height: 500px;
+}
+
+.texto-reservas {
+  grid-column: 1/-1;
+  color: #fff;
+  text-align: center;
+}
+
+.titulo-reserva {
+  font-size: 40px;
+  font-weight: bold;
+  margin-top: 100px;
+  margin-bottom: 30px;
+}
+
+.parrafo-reserva {
+  font-size: 20px;
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.button-cotizar {
+  grid-column: 1/-1;
+  text-align: center;
+}
+
+.button-dos {
+  font-family: "Kalam", cursive;
+  height: 50px;
+  width: 300px;
+  background-color: #cd6032;
+  color: #fff;
+  font-size: 25px;
+  border-radius: 10px;
+  border-color: #cd6032;
+  display: inline-block;
+  cursor: pointer;
+  transition: 0.2s ease all;
+}
+
+.button-dos:hover {
+  box-shadow: 5px 8px 15px #4a4949;
+}
+
+.opcion-de-reserva {
+  grid-column: 2/-2;
+  display: flex;
+  margin: 20px 10px 10px 10px;
+  padding-bottom: 30px;
+}
+
+.opcion {
+  font-size: 18px;
+  text-align: justify;
 }
 
 /*** Main - Servicios ***/
@@ -932,7 +1008,7 @@ body {
   justify-content: center;
   font-size: 35px;
   font-weight: bold;
-  margin-top: 20px;
+  margin-top: 90px;
   margin-bottom: 30px;
 }
 
@@ -968,42 +1044,6 @@ body {
   margin-top: 10px;
   padding-left: 60px;
   padding-right: 60px;
-}
-
-/* Main - Reservas */
-.reservas {
-  background: #000000;
-  color: #fff;
-  height: 700px;
-}
-
-.texto-reservas {
-  grid-column: 1/-1;
-  color: #fff;
-  text-align: center;
-}
-
-.titulo-reserva {
-  font-size: 35px;
-  font-weight: bold;
-  margin-top: 30px;
-}
-
-.parrafo-reserva {
-  font-size: 20px;
-  text-align: center;
-  margin-top: 20px;
-}
-
-.opcion-de-reserva {
-  grid-column: 2/-2;
-  display: flex;
-  margin: 10px;
-}
-
-.opcion {
-  font-size: 18px;
-  text-align: justify;
 }
 
 /* Main - Nuestra Empresa */
@@ -1147,8 +1187,41 @@ body {
     margin: 20px;
   }
   .button-uno {
-    width: 120px;
+    width: 130px;
     font-size: 16px;
+  }
+  /* Main - Reservas */
+  .reservas {
+    background: #151515;
+    color: #fff;
+    height: auto;
+    padding: 10px;
+  }
+  .texto-reservas {
+    grid-column: 1/-1;
+  }
+  .titulo-reserva {
+    font-size: 30px;
+  }
+  .parrafo-reserva {
+    font-size: 18px;
+    text-align: center;
+    margin-left: 40px;
+    margin-right: 40px;
+  }
+  .button-dos {
+    height: 50px;
+    width: 240px;
+    font-size: 22px;
+  }
+  .opcion-de-reserva {
+    grid-column: 2/-2;
+    display: flex;
+    margin-bottom: 10px;
+  }
+  .opcion {
+    font-size: 18px;
+    text-align: justify;
   }
   /* Main - Servicios */
   .servicios {
@@ -1193,34 +1266,6 @@ body {
     margin-bottom: 30px;
     padding-left: 55px;
     padding-right: 55px;
-  }
-  /* Main - Reservas */
-  .reservas {
-    background: #242424;
-    color: #fff;
-    height: auto;
-    padding: 10px;
-  }
-  .texto-reservas {
-    grid-column: 1/-1;
-  }
-  .titulo-reserva {
-    font-size: 30px;
-  }
-  .parrafo-reserva {
-    font-size: 18px;
-    text-align: center;
-    margin-left: 40px;
-    margin-right: 40px;
-  }
-  .opcion-de-reserva {
-    grid-column: 2/-2;
-    display: flex;
-    margin-bottom: 10px;
-  }
-  .opcion {
-    font-size: 18px;
-    text-align: justify;
   }
   /* Main - Nuestra Empresa */
   .nuestra-empresa {
@@ -1334,8 +1379,42 @@ body {
     margin: 0 20px 30px 30px;
   }
   .button-uno {
+    height: 40px;
     width: 95px;
-    font-size: 13px;
+    font-size: 14px;
+  }
+  /* Main - Reservas */
+  .reservas {
+    background: #151515;
+    color: #fff;
+    height: auto;
+    padding: 10px 0;
+  }
+  .texto-reservas {
+    grid-column: 1/-1;
+  }
+  .button-dos {
+    height: 40px;
+    width: 180px;
+    font-size: 18px;
+  }
+  .opcion-de-reserva {
+    grid-column: 1/-1;
+    display: flex;
+    margin: 20px;
+  }
+  .titulo-reserva {
+    font-size: 20px;
+  }
+  .parrafo-reserva {
+    font-size: 15px;
+    text-align: center;
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .opcion {
+    font-size: 15px;
+    text-align: justify;
   }
   /* Main - Servicios */
   .servicios {
@@ -1380,34 +1459,6 @@ body {
     margin-bottom: 30px;
     padding-left: 5px;
     padding-right: 5px;
-  }
-  /* Main - Reservas */
-  .reservas {
-    background: #242424;
-    color: #fff;
-    height: auto;
-    padding: 10px 0;
-  }
-  .texto-reservas {
-    grid-column: 1/-1;
-  }
-  .opcion-de-reserva {
-    grid-column: 1/-1;
-    display: flex;
-    margin: 20px;
-  }
-  .titulo-reserva {
-    font-size: 20px;
-  }
-  .parrafo-reserva {
-    font-size: 15px;
-    text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-  .opcion {
-    font-size: 15px;
-    text-align: justify;
   }
   /* Main - Nuestra Empresa */
   .nuestra-empresa {
