se hacen ajustes en px

--- a/css/style.css
+++ b/css/style.css
@@ -997,7 +997,7 @@ body {
 /*** Main - Servicios ***/
 .servicios {
   background-color: #000000;
-  height: 920px;
+  height: 960px;
   padding: 20px;
 }
 
@@ -1202,12 +1202,15 @@ body {
   }
   .titulo-reserva {
     font-size: 30px;
+    margin-top: 30px;
   }
   .parrafo-reserva {
     font-size: 18px;
     text-align: center;
     margin-left: 40px;
     margin-right: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
   }
   .button-dos {
     height: 50px;
@@ -1405,12 +1408,13 @@ body {
   }
   .titulo-reserva {
     font-size: 20px;
+    margin-top: 30px;
   }
   .parrafo-reserva {
     font-size: 15px;
     text-align: center;
-    margin-left: 20px;
-    margin-right: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
   }
   .opcion {
     font-size: 15px;
