--- a/scss/style.scss
+++ b/scss/style.scss
@@ -813,3 +813,580 @@ body {
     margin-bottom: 20px;
   }
 }
+
+/*** FORMULARIOS ***/
+
+/* Formulario de contacto */
+
+.formulario__uno {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 90px 50px 90px 50px;
+}
+
+.formulario__contactanos {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background-color: #fff;
+  width: 60%;
+  height: auto;
+  padding: 20px 50px 20px 50px;
+}
+
+.formulario__contactanos {
+  border-color: #cd6032;
+  border-style: solid;
+  box-shadow: 5px 10px 18px #151515;
+  border-radius: 10px;
+  border-width: 3px;
+}
+
+.titulo_contactanos {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 28px;
+  padding: 20px 0 10px 0;
+}
+.texto_contactanos {
+  display: flex;
+  font-size: 18px;
+  padding-bottom: 20px;
+}
+
+input[type="checkbox"]:checked {
+  width: 18px;
+  height: 18px;
+}
+
+input[type="checkbox"] {
+  transition: all 0.4s;
+}
+
+.formulario__label {
+  display: block;
+  font-weight: bold;
+  font-size: 15px;
+  padding: 20px 0 10px 0;
+  cursor: pointer;
+}
+
+.formulario__grupo-input {
+  position: relative;
+}
+
+.formulario__input {
+  width: 100%;
+  background: #fff;
+  border: 1px solid;
+  border-radius: 3px;
+  height: 45px;
+  line-height: 45px;
+  padding: 10px;
+  transition: 0.3s ease all;
+}
+
+.formulario__input:focus {
+  border: 2px solid #0075ff;
+  outline: none;
+  box-shadow: 3px 0px 30px #a3a3a366;
+}
+
+.formulario__input-error {
+  color: #bb2929;
+  font-size: 13px;
+  margin: 10px 0 5px 0;
+  display: none;
+}
+
+.formulario__input-error-activo {
+  display: block;
+}
+
+.formulario__validacion-estado {
+  position: absolute;
+  margin-left: 5px;
+  z-index: 100;
+  font-size: 15px;
+  opacity: 0;
+}
+
+.casilla__consulta {
+  height: 100%;
+  width: 100%;
+  border: 1px solid;
+  transition: 0.3s ease all;
+}
+
+.casilla__consulta:focus {
+  border: 3px solid #0075ff;
+  outline: none;
+  box-shadow: 3px 0px 30px #a3a3a366;
+}
+
+.btn__dos {
+  display: flex;
+  flex-direction: row;
+  padding: 10px 0 20px 40px;
+  justify-content: flex-end;
+}
+
+.btn_volver {
+  font-family: "Kalam", cursive;
+  height: 45px;
+  width: 90px;
+  margin-left: 15px;
+  background-color: #000000;
+  color: #fff;
+  font-size: 15px;
+  border-radius: 10px;
+  display: inline-block;
+  cursor: pointer;
+  transition: 0.2s ease all;
+}
+
+.formulario__btn {
+  font-family: "Kalam", cursive;
+  height: 45px;
+  width: 150px;
+  margin-left: 15px;
+  background-color: #000000;
+  color: #fff;
+  font-size: 15px;
+  border-radius: 10px;
+  display: inline-block;
+  cursor: pointer;
+  transition: 0.2s ease all;
+}
+
+.btn_volver,
+.formulario__btn {
+  box-shadow: 5px 8px 15px #2c2c2c;
+}
+
+.formulario__btn:hover {
+  box-shadow: 5px 8px 15px #cd6032;
+}
+
+.btn_volver:hover {
+  box-shadow: 5px 8px 15px #cd6032;
+}
+
+/* -----  Estilos para Validacion ----- */
+
+.formulario__grupo-correcto .formulario__validacion-estado {
+  color: #29c436;
+  opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__label {
+  color: #bb2929;
+}
+
+.formulario__grupo-incorrecto .formulario__validacion-estado {
+  color: #bb2929;
+  opacity: 1;
+}
+
+.formulario__grupo-incorrecto .formulario__input {
+  border: 2px solid #bb2929;
+}
+
+/*** Formulario de cotización ***/
+
+.formulario__dos {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 90px 20px 90px 20px;
+}
+
+.formulario {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background-color: #fff;
+  width: 70%;
+  height: auto;
+  padding: 20px 50px 30px 50px;
+}
+
+.formulario {
+  border-color: #cd6032;
+  border-style: solid;
+  box-shadow: 5px 10px 18px #151515;
+  border-radius: 10px;
+  border-width: 3px;
+}
+
+.titulo_cotizacion {
+  display: flex;
+  flex-direction: column;
+  font-size: 28px;
+  padding: 20px 0 10px 0;
+  align-items: center;
+}
+
+.texto_cotizacion {
+  font-size: 18px;
+  padding: 0 10px 20px 5px;
+}
+
+.palabra_servicio,
+.palabra_fecha,
+.palabra_horas,
+.palabra_invitados {
+  font-size: 16px;
+  font-weight: bold;
+}
+
+#opciones {
+  padding: 5px;
+}
+
+.opciones_evento {
+  font-size: 15px;
+  padding: 10px 0 10px 0;
+  display: inline-block;
+}
+
+.opciones_evento > input {
+  margin: 0 5px 0 20px;
+}
+
+.servicios_dos {
+  display: flex;
+  flex-direction: row; /*column para mobile*/
+  padding: 5px;
+}
+
+.turnos {
+  font-size: 15px;
+  margin: 10px 0 10px 0;
+  display: inline-block;
+}
+
+.turnos > input {
+  margin: 0 5px 0 20px;
+}
+
+.servicios_salon {
+  font-size: 15px;
+  margin: 5px 5px 0 40px;
+}
+
+.servicio {
+  width: 100px;
+  height: 30px;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.opciones_tres {
+  display: flex;
+  flex-direction: row; /* column para mobile*/
+  padding: 5px 5px 15px 5px;
+}
+
+.fecha {
+  width: 120px;
+  height: 30px;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.fecha_evento {
+  margin-right: 50px;
+}
+
+.numHoras {
+  width: 70px;
+  height: 30px;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.cantidad_horas {
+  margin-right: 50px;
+}
+
+.numPersonas {
+  width: 70px;
+  height: 30px;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.cantidad_personas {
+  margin-right: 50px;
+}
+
+.btn_uno {
+  display: flex;
+  flex-direction: row;
+  padding: 20px 0 10px 0;
+  justify-content: flex-end;
+}
+
+.btn-volver {
+  font-family: "Kalam", cursive;
+  height: 45px;
+  width: 90px;
+  margin: 5px 15px 0 0;
+  background-color: #000000;
+  color: #fff;
+  font-size: 15px;
+  border-radius: 10px;
+  display: inline-block;
+  cursor: pointer;
+  transition: 0.2s ease all;
+}
+.boton_cotizar {
+  font-family: "Kalam", cursive;
+  height: 45px;
+  width: 170px;
+  margin: 5px 15px 0 0;
+  background-color: #000000;
+  color: #fff;
+  font-size: 15px;
+  border-radius: 10px;
+  display: inline-block;
+  cursor: pointer;
+  transition: 0.2s ease all;
+}
+
+.disabled-link {
+  pointer-events: none;
+  display: none;
+}
+
+.boton_reservar {
+  font-family: "Kalam", cursive;
+  height: 45px;
+  width: 170px;
+  margin: 5px 0 10px 25px;
+  background-color: #cd6032;
+  color: #fff;
+  font-size: 15px;
+  border-radius: 10px;
+  border-color: #cd6032;
+  display: inline-block;
+  cursor: pointer;
+  transition: 0.2s ease all;
+}
+
+.btn-volver,
+.boton_reservar,
+.boton_cotizar {
+  box-shadow: 5px 8px 15px #2c2c2c;
+}
+
+.btn-volver:hover {
+  box-shadow: 5px 8px 15px #cd6032;
+}
+
+.boton_reservar:hover {
+  box-shadow: 5px 8px 15px #cd6032;
+}
+
+.boton_cotizar:hover {
+  box-shadow: 5px 8px 15px #cd6032;
+}
+
+.result {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 17px 20px 12px 10px;
+}
+
+.result_reserva {
+  font-size: 18px;
+  font-weight: bold;
+  margin: 17px 0 12px 10px;
+}
+
+.texto_reserva {
+  font-size: 15px;
+  font-weight: bold;
+  color: #cd6032;
+  margin-top: 18px;
+  margin-right: 5px;
+}
+
+.formulario__input-error__tres {
+  color: #bb2929;
+  font-size: 13px;
+  margin-top: 4px;
+  margin-bottom: 7px;
+  display: none;
+}
+
+.formulario__input-error-activo__tres {
+  display: block;
+}
+
+/*** Formulario de reserva ***/
+
+.formulario__tres {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 90px 50px 90px 50px;
+}
+
+.formulario__reservar {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background-color: #fff;
+  width: 60%;
+  height: auto;
+  padding: 20px 50px 20px 50px;
+}
+.formulario__reservar {
+  border-color: #cd6032;
+  border-style: solid;
+  box-shadow: 5px 10px 18px #151515;
+  border-radius: 10px;
+  border-width: 3px;
+}
+
+.titulo_reservar {
+  display: flex;
+  flex-direction: column;
+  font-size: 28px;
+  padding: 20px 0 30px 0;
+  align-items: center;
+}
+.texto_reservar_uno {
+  font-size: 20px;
+  font-weight: bold;
+}
+.texto_reservar_dos {
+  font-size: 20px;
+  font-weight: bold;
+  padding-top: 30px;
+}
+
+.formulario__label__dos {
+  display: block;
+  font-weight: bold;
+  font-size: 15px;
+  padding: 20px 0 10px 0;
+  cursor: pointer;
+}
+
+.formulario__grupo-input__dos {
+  position: relative;
+}
+
+.formulario__input__dos {
+  background: #fff;
+  border: 1px solid;
+  border-radius: 3px;
+  width: 100%;
+  height: 45px;
+  line-height: 45px;
+  padding: 20px;
+  transition: 0.3s ease all;
+}
+
+.formulario__input__dos:focus {
+  border: 2px solid #0075ff;
+  outline: none;
+  box-shadow: 3px 0px 30px #a3a3a366;
+}
+
+.formulario__input-error__dos {
+  color: #bb2929;
+  font-size: 13px;
+  margin: 10px 0 5px 0;
+  display: none;
+}
+
+.formulario__input-error-activo__dos {
+  display: block;
+}
+
+input:disabled {
+  background-color: #f0ececa4;
+  color: #000000;
+}
+
+.formulario__validacion-estado__dos {
+  position: absolute;
+  margin-left: 5px;
+  z-index: 100;
+  font-size: 15px;
+  opacity: 0;
+}
+
+.btn__tres {
+  display: flex;
+  flex-direction: row;
+  padding: 30px 0 20px 40px;
+  justify-content: flex-end;
+}
+
+.btn_salir {
+  font-family: "Kalam", cursive;
+  height: 45px;
+  width: 90px;
+  margin-left: 15px;
+  background-color: #000000;
+  color: #fff;
+  font-size: 15px;
+  border-radius: 10px;
+  display: inline-block;
+  cursor: pointer;
+  transition: 0.2s ease all;
+}
+
+.formulario__btn__dos {
+  font-family: "Kalam", cursive;
+  height: 45px;
+  width: 180px;
+  margin-left: 15px;
+  background-color: #000000;
+  color: #fff;
+  font-size: 15px;
+  border-radius: 10px;
+  display: inline-block;
+  cursor: pointer;
+  transition: 0.2s ease all;
+}
+
+.btn_salir,
+.formulario__btn__dos {
+  box-shadow: 5px 8px 15px #2c2c2c;
+}
+
+.btn_salir:hover {
+  box-shadow: 5px 8px 15px #cd6032;
+}
+
+.formulario__btn__dos:hover {
+  box-shadow: 5px 8px 15px #cd6032;
+}
+
+/* -----  Estilos para Validacion de formulario de reserva ----- */
+
+.formulario__grupo-correcto__dos .formulario__validacion-estado__dos {
+  color: #29c436;
+  opacity: 1;
+}
+
+.formulario__grupo-incorrecto__dos .formulario__label__dos {
+  color: #bb2929;
+}
+
+.formulario__grupo-incorrecto__dos .formulario__validacion-estado__dos {
+  color: #bb2929;
+  opacity: 1;
+}
+
+.formulario__grupo-incorrecto__dos .formulario__input__dos {
+  border: 2px solid #bb2929;
+}
