--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1017,7 +1017,7 @@ input[type="checkbox"] {
   flex-direction: column;
   justify-content: space-evenly;
   background-color: #fff;
-  width: 70%;
+  width: 80%;
   height: auto;
   padding: 20px 50px 30px 50px;
 }
@@ -1100,10 +1100,11 @@ input[type="checkbox"] {
 }
 
 .fecha {
-  width: 120px;
+  width: 135px;
   height: 30px;
   border-radius: 5px;
   font-size: 14px;
+  padding-left: 10px;
 }
 
 .fecha_evento {
@@ -1111,8 +1112,9 @@ input[type="checkbox"] {
 }
 
 .numHoras {
-  width: 70px;
+  width: 50px;
   height: 30px;
+  padding-left: 10px;
   border-radius: 5px;
   font-size: 14px;
 }
@@ -1122,8 +1124,9 @@ input[type="checkbox"] {
 }
 
 .numPersonas {
-  width: 70px;
+  width: 75px;
   height: 30px;
+  padding-left: 10px;
   border-radius: 5px;
   font-size: 14px;
 }
@@ -1282,6 +1285,7 @@ input[type="checkbox"] {
   font-size: 20px;
   font-weight: bold;
 }
+
 .texto_reservar_dos {
   font-size: 20px;
   font-weight: bold;
