--- a/scss/_medidas.scss
+++ b/scss/_medidas.scss
@@ -107,6 +107,7 @@
   }
   @media screen and (max-width: 400px) {
     width: 95px;
+    padding: 5px;
   }
 }
 
@@ -118,7 +119,6 @@
   }
   @media screen and (max-width: 400px) {
     height: auto;
-    padding: 10px 0;
   }
 }
 
@@ -129,6 +129,7 @@
   }
   @media screen and (max-width: 400px) {
     margin-top: 30px;
+    margin-bottom: 0;
   }
 }
 
