--- a/scss/style.scss
+++ b/scss/style.scss
@@ -651,6 +651,7 @@ body {
     height: 40px;
     width: 95px;
     font-size: 14px;
+    padding: 5px;
   }
 
   /* Main - Reservas */
@@ -659,7 +660,6 @@ body {
     background: #151515;
     color: #fff;
     height: auto;
-    padding: 10px 0;
   }
 
   .texto-reservas {
@@ -679,8 +679,9 @@ body {
   }
 
   .titulo-reserva {
-    font-size: 20px;
+    font-size: 22px;
     margin-top: 30px;
+    margin-bottom: 0;
   }
 
   .parrafo-reserva {
@@ -706,7 +707,7 @@ body {
     grid-column: 1/-1;
     display: flex;
     justify-content: center;
-    font-size: 20px;
+    font-size: 22px;
     font-weight: bold;
     margin-top: 20px;
     margin-bottom: 30px;
@@ -733,7 +734,7 @@ body {
   }
 
   .subtitulo-servicio {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: bold;
     margin-top: 30px;
   }
@@ -755,7 +756,7 @@ body {
   }
 
   .titulo-empresa {
-    font-size: 20px;
+    font-size: 22px;
   }
 
   .parrafo-empresa {
@@ -792,7 +793,7 @@ body {
   }
 
   .titulo-footer {
-    font-size: 19px;
+    font-size: 20px;
   }
 
   .subtitulo-footer {
@@ -847,6 +848,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   font-size: 30px;
   padding: 20px 0 10px 0;
 }
@@ -1016,6 +1018,7 @@ input[type="checkbox"] {
   .titulo_contactanos {
     font-size: 28px;
     padding: 20px 0 10px 0;
+    text-align: center;
   }
 
   .texto_contactanos {
@@ -1066,6 +1069,7 @@ input[type="checkbox"] {
   .titulo_contactanos {
     font-size: 22px;
     padding: 10px 0 10px 0;
+    text-align: center;
   }
 
   .texto_contactanos {
