se agrega color

--- a/scss/_colores.scss
+++ b/scss/_colores.scss
@@ -6,6 +6,7 @@ $baseTerciaria-color: #cd6032;
 $fuenteSombra-primaria-color: #151515;
 $fuenteSombra-secundaria-color: #a3a3a366;
 $fuenteSombra-terciaria-color: #2c2c2c;
+$fuenteSombra-cuaternaria-color:#d1724990;
 $base-color-input: #f0ececa4;
 $base-validacion: #29c436;
 $base-focus: #0075ff;
@@ -55,6 +56,10 @@ $base-error: #bb2929;
 .footer,
 .texto-footer {
   color: $baseSecundaria-color;
+}
+
+.button-dos:hover {
+  box-shadow: 5px 8px 15px $fuenteSombra-cuaternaria-color;
 }
 
 .textos-tiare,
